k8s/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: istio-ingressgateway
    meta.helm.sh/release-namespace: istio-system
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Use Network Load Balancer (NLB) for AWS
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/instance: istio-ingressgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 1.29.1
    helm.sh/chart: gateway-1.29.1
    istio: ingressgateway
    istio.io/dataplane-mode: none
  name: istio-ingressgateway
  namespace: istio-system
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: status-port
    nodePort: 30389
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    nodePort: 31295
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
